--- a/fabricjschess/practice2.html
+++ b/fabricjschess/practice2.html
@@ -74,6 +74,7 @@
     let isWhiteTurn = true;
     let selectedPiece = null;
     let isTTSOn = true;
+    let enPassantTarget = null;
 
     // Timer variables
     let whiteTime = 300; // 5 minutes in seconds
@@ -98,12 +99,14 @@
           if (whiteTime <= 0) {
             clearInterval(timerInterval);
             alert("Black wins by timeout!");
+            return;
           }
         } else {
           blackTime--;
           if (blackTime <= 0) {
             clearInterval(timerInterval);
             alert("White wins by timeout!");
+            return;
           }
         }
         updateTimers();
@@ -150,79 +153,13 @@
                 scaleY: tileSize / img.height,
                 hasControls: false,
                 hasBorders: false,
-                selectable: true,
+                selectable: false,
                 data: { row: i, col: j, piece }
               });
-              img.on('mousedown', (e) => selectPiece(e));
-              img.on('mouseup', (e) => movePiece(e));
               canvas.add(img);
             });
           }
         }
-      }
-    }
-
-    function selectPiece(e) {
-      if (isWhiteTurn && e.target.data.piece.toUpperCase() === e.target.data.piece) {
-        selectedPiece = e.target;
-        speak(`Selected ${e.target.data.piece}`);
-      } else if (!isWhiteTurn && e.target.data.piece.toLowerCase() === e.target.data.piece) {
-        selectedPiece = e.target;
-        speak(`Selected ${e.target.data.piece}`);
-      }
-    }
-
-    function movePiece(e) {
-      if (selectedPiece) {
-        const target = e.target;
-        if (isMoveValid(selectedPiece.data, target.data)) {
-          const { row, col } = target.data;
-          const { row: srcRow, col: srcCol } = selectedPiece.data;
-
-          // Move the piece
-          game[row][col] = selectedPiece.data.piece;
-          game[srcRow][srcCol] = '';
-
-          // Update the canvas
-          selectedPiece.set({ left: col * 60, top: row * 60 });
-          canvas.renderAll();
-          selectedPiece = null;
-
-          // Change turn
-          isWhiteTurn = !isWhiteTurn;
-          speak(isWhiteTurn ? "White's turn" : "Black's turn");
-        }
-      }
-    }
-
-    function isMoveValid(from, to) {
-      // Basic move validation; you can extend this as needed
-      const { row: fromRow, col: fromCol, piece } = from;
-      const { row: toRow, col: toCol } = to;
-      const rowDiff = Math.abs(fromRow - toRow);
-      const colDiff = Math.abs(fromCol - toCol);
-
-      switch (piece.toLowerCase()) {
-        case 'p':
-          // Pawn move validation
-          if (piece === 'P') {
-            return (fromCol === toCol && (fromRow - toRow === 1 || (fromRow === 6 && fromRow - toRow === 2))) ||
-                   (fromCol !== toCol && fromRow - toRow === 1 && game[toRow][toCol] !== '');
-          }
-          return (fromCol === toCol && (toRow - fromRow === 1 || (fromRow === 1 && toRow - fromRow === 2))) ||
-                 (fromCol !== toCol && toRow - fromRow === 1 && game[toRow][toCol] !== '');
-        case 'r':
-          return fromRow === toRow || fromCol === toCol;
-        case 'n':
-          return (rowDiff === 2 && colDiff === 1) || (rowDiff === 1 && colDiff === 2);
-        case 'b':
-          return rowDiff === colDiff;
-        case 'q':
-          return fromRow === toRow || fromCol === toCol || rowDiff === colDiff;
-        case 'k':
-          return rowDiff <= 1 && colDiff <= 1;
-        default:
-          return false;
       }
     }
 
@@ -237,17 +174,137 @@
         ['P', 'P', 'P', 'P', 'P', 'P', 'P', 'P'],
         ['R', 'N', 'B', 'Q', 'K', 'B', 'N', 'R']
       ];
+      isWhiteTurn = true;
+      selectedPiece = null;
+      whiteTime = blackTime = 300;
+      clearInterval(timerInterval);
       canvas.clear();
       drawBoard();
       drawPieces();
+      updateTimers();
       startTimer();
+      speak("Game started. White's turn.");
     }
 
     function toggleTTS() {
       isTTSOn = !isTTSOn;
-      document.getElementById('tts-status').textContent = isTTSOn ? 'Turn off TTS' : 'Turn on TTS';
+      document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
     }
 
+    canvas.on('mouse:down', (event) => {
+      const pointer = canvas.getPointer(event.e);
+      const row
+      const row = Math.floor(pointer.y / 60);
+      const col = Math.floor(pointer.x / 60);
+      const piece = game[row][col];
+
+      if (selectedPiece) {
+        const { row: startRow, col: startCol, piece: selectedPieceType } = selectedPiece;
+
+        if (isValidMove(selectedPieceType, startRow, startCol, row, col)) {
+          // Check for special moves like en passant
+          if (selectedPieceType.toLowerCase() === 'p' && Math.abs(startRow - row) === 1 && Math.abs(startCol - col) === 1 && game[row][col] === '') {
+            // En passant logic here if applicable
+            game[row][col] = ''; // Remove captured pawn
+            game[row][col] = selectedPieceType; // Move pawn to the new location
+          } else {
+            game[row][col] = selectedPieceType;
+            game[startRow][startCol] = '';
+          }
+
+          drawPieces();
+          isWhiteTurn = !isWhiteTurn;
+          speak(`${selectedPieceType.toUpperCase()} moved to ${String.fromCharCode(97 + col)}${8 - row}`);
+          speak(isWhiteTurn ? "White's turn." : "Black's turn.");
+        } else {
+          speak("Invalid move.");
+        }
+        selectedPiece = null;
+      } else if (piece && ((isWhiteTurn && piece === piece.toUpperCase()) || (!isWhiteTurn && piece === piece.toLowerCase()))) {
+        selectedPiece = { row, col, piece };
+        speak(`${piece.toUpperCase()} selected.`);
+      }
+    });
+
+    function isValidMove(piece, startRow, startCol, endRow, endCol) {
+      // Basic validation based on piece type
+      const rowDiff = Math.abs(endRow - startRow);
+      const colDiff = Math.abs(endCol - startCol);
+
+      switch (piece.toLowerCase()) {
+        case 'p': // Pawn movement
+          if (piece === 'P') { // White pawn
+            if (startCol === endCol && rowDiff === 1 && game[endRow][endCol] === '') {
+              return true; // Forward move
+            }
+            if (startCol === endCol && startRow === 1 && rowDiff === 2 && game[endRow][endCol] === '' && game[startRow + 1][startCol] === '') {
+              return true; // First double move
+            }
+            if (rowDiff === 1 && colDiff === 1 && game[endRow][endCol] !== '' && game[endRow][endCol].toLowerCase() !== piece) {
+              return true; // Capture
+            }
+            break;
+          } else { // Black pawn
+            if (startCol === endCol && rowDiff === 1 && game[endRow][endCol] === '') {
+              return true; // Forward move
+            }
+            if (startCol === endCol && startRow === 6 && rowDiff === 2 && game[endRow][endCol] === '' && game[startRow - 1][startCol] === '') {
+              return true; // First double move
+            }
+            if (rowDiff === 1 && colDiff === 1 && game[endRow][endCol] !== '' && game[endRow][endCol].toLowerCase() !== piece) {
+              return true; // Capture
+            }
+            break;
+          }
+        case 'r': // Rook movement
+          if (startRow === endRow || startCol === endCol) {
+            return isPathClear(startRow, startCol, endRow, endCol);
+          }
+          break;
+        case 'n': // Knight movement
+          if ((rowDiff === 2 && colDiff === 1) || (rowDiff === 1 && colDiff === 2)) {
+            return true;
+          }
+          break;
+        case 'b': // Bishop movement
+          if (rowDiff === colDiff) {
+            return isPathClear(startRow, startCol, endRow, endCol);
+          }
+          break;
+        case 'q': // Queen movement
+          if (startRow === endRow || startCol === endCol || rowDiff === colDiff) {
+            return isPathClear(startRow, startCol, endRow, endCol);
+          }
+          break;
+        case 'k': // King movement
+          if (rowDiff <= 1 && colDiff <= 1) {
+            return true;
+          }
+          break;
+        default:
+          return false;
+      }
+      return false;
+    }
+
+    function isPathClear(startRow, startCol, endRow, endCol) {
+      const rowDirection = endRow > startRow ? 1 : endRow < startRow ? -1 : 0;
+      const colDirection = endCol > startCol ? 1 : endCol < startCol ? -1 : 0;
+
+      let row = startRow + rowDirection;
+      let col = startCol + colDirection;
+
+      while (row !== endRow || col !== endCol) {
+        if (game[row][col] !== '') {
+          return false; // Path is blocked
+        }
+        row += rowDirection;
+        col += colDirection;
+      }
+      return true;
+    }
+
+    // Start the game when the page loads
     window.onload = startRestartGame;
   </script>
 </body>
